--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -50,8 +50,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "1 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3091080",
-    image:
-      "https://cdn.qwiklabs.com/xRejIPM4k6VgI8%2B%2B2Nz5bFHFx8PwK0nn9oQofkJOsS4%3D",
+    image: "/webp_certs/GoogleCloudEssentials.webp",
     cl: "no-oculto",
   },
   {
@@ -59,8 +58,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "3 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3098272",
-    image:
-      "https://cdn.qwiklabs.com/TbOoOcpQdNxRawSvSE3K5cbakxBmki8F%2FgjwN6yKY98%3D",
+    image: "/webp_certs/CreateandManageCloudResources.webp",
     cl: "no-oculto",
   },
   {
@@ -68,8 +66,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "4 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3102799",
-    image:
-      "https://cdn.qwiklabs.com/9qikCAvRUMlQZkRAj3FqOQN00x3Jk%2BiA3QtkuhoRGvY%3D",
+    image: "/webp_certs/NetworkPerformanceOptimization.webp",
     cl: "no-oculto",
   },
   {
@@ -77,8 +74,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "5 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3103636",
-    image:
-      "https://cdn.qwiklabs.com/Z5mHEcZSfjDvSjtBRmzjgY1O5B9uT%2BJME8KqR%2FgmmyI%3D",
+    image: "/webp_certs/SetupAndConfigureACloudEnviroment.webp",
     cl: "no-oculto",
   },
   {
@@ -86,8 +82,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "5 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3103704",
-    image:
-      "https://cdn.qwiklabs.com/SOUHCWvev6HmfC5QztXJd%2BCkSK8%2B3WGWg%2BF%2Fww%2FfqXA%3D",
+    image: "/webp_certs/PerformInfraestructureTasks.webp",
     cl: "no-oculto",
   },
   {
@@ -95,8 +90,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "7 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3111946",
-    image:
-      "https://cdn.qwiklabs.com/6QsPX5Wdg0eHWFed3ZKTbX2c88yVFGgaWPlYt%2BJdp4Q%3D",
+    image: "/webp_certs/BuildAndSecureNetworks.webp",
     cl: "no-oculto",
   },
   {
@@ -104,8 +98,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "7 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112487",
-    image:
-      "https://cdn.qwiklabs.com/vi9U3TnPxXdjiaH1GwmBT2Q1GXpSJ%2FoWYVbWaxj%2FYpk%3D",
+    image: "/webp_certs/ServerlessFirebaseDevelopment.webp",
     cl: "hidden",
   },
   {
@@ -113,8 +106,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "7 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112739",
-    image:
-      "https://cdn.qwiklabs.com/Ai2kcbL3CEc9Yylwr2z2PabrBhBdJMvd6PLrD7AcJqo%3D",
+    image: "/webp_certs/ServerlessCloudRun.webp",
     cl: "hidden",
   },
   {
@@ -122,8 +114,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "7 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112920",
-    image:
-      "https://cdn.qwiklabs.com/Eg%2FSbOy66StYJSJgDWYLrHAMVb%2F28ZfyndLzHYtQPeA%3D",
+    image: "/webp_certs/BaselineInfraestructure.webp",
     cl: "hidden",
   },
   {
@@ -131,8 +122,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "7 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112922",
-    image:
-      "https://cdn.qwiklabs.com/CK1Zt1Rct6URvfcD6V89kJapt5%2BrX8gcZoW6T6qpfhQ%3D",
+    image: "/webp_certs/CloudEng.webp",
     cl: "no-oculto",
   },
   {
@@ -140,8 +130,7 @@ const PROJECTS = [
     issuer: [TAGS.GOOGLE],
     date: "7 Jan 2023",
     link: "https://www.cloudskillsboost.google/public_profiles/9b7d33b5-f2b7-4736-b5df-e4537f1f7f03/badges/3112928",
-    image:
-      "https://cdn.qwiklabs.com/JdUu8WCGmvzBQnppDxG%2Fn1IoguiHNd0O%2FtdP3yWyv4Q%3D",
+    image: "/webp_certs/BuildAppsAndWebsites.webp",
     cl: "hidden",
   },
   {
@@ -149,8 +138,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "14 Mar 2023",
     link: "https://media.licdn.com/dms/image/D4D2DAQF3CcWNIEk0Ig/profile-treasury-document-images_1920/1/1706689163030?e=1709164800&v=beta&t=cYJjS-kUOFw6Pl34gfQy1BR90TqAC926CAu0yi0VVMw",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQF3CcWNIEk0Ig/profile-treasury-document-images_1920/1/1706689163030?e=1709164800&v=beta&t=cYJjS-kUOFw6Pl34gfQy1BR90TqAC926CAu0yi0VVMw",
+    image: "/webp_certs/DiplomaturaDjango.webp",
     cl: "no-oculto",
   },
   {
@@ -158,8 +146,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "14 Mar 2023",
     link: "https://media.licdn.com/dms/image/D4D2DAQGc9RgTlb12FA/profile-treasury-document-images_1920/1/1706689026768?e=1709164800&v=beta&t=xDnkU2QKp_HMwwvFSCfo5y0FJOxgh5ZCOe91R06WB5s",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQGc9RgTlb12FA/profile-treasury-document-images_1920/1/1706689026768?e=1709164800&v=beta&t=xDnkU2QKp_HMwwvFSCfo5y0FJOxgh5ZCOe91R06WB5s",
+    image: "/webp_certs/DjangoAvanzado.webp",
     cl: "hidden",
   },
   {
@@ -167,8 +154,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "28 Dec 2022",
     link: "https://media.licdn.com/dms/image/D4D2DAQHD37bBHkBMpQ/profile-treasury-document-images_1920/1/1706689384487?e=1709164800&v=beta&t=sET0V4xyseEjCHW-WMpeuekyJfo0DQOGT-gcvOkTEdo",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQHD37bBHkBMpQ/profile-treasury-document-images_1920/1/1706689384487?e=1709164800&v=beta&t=sET0V4xyseEjCHW-WMpeuekyJfo0DQOGT-gcvOkTEdo",
+    image: "/webp_certs/DjangoIntermedio.webp",
     cl: "hidden",
   },
   {
@@ -176,8 +162,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "11 Oct 2022",
     link: "https://media.licdn.com/dms/image/D4D2DAQFBK51Nf97XYQ/profile-treasury-document-images_1920/1/1706689740894?e=1709164800&v=beta&t=jmhYqs0nQ5PNlKBgYBPZ-c3iL3SluhGtlhBn_hPbbbk",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQFBK51Nf97XYQ/profile-treasury-document-images_1920/1/1706689740894?e=1709164800&v=beta&t=jmhYqs0nQ5PNlKBgYBPZ-c3iL3SluhGtlhBn_hPbbbk",
+    image: "/webp_certs/DjangoInicial.webp",
     cl: "hidden",
   },
   {
@@ -185,8 +170,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "15 Apr 2022",
     link: "https://media.licdn.com/dms/image/D4D2DAQEyr6JabhTo-Q/profile-treasury-document-images_1920/1/1706689887273?e=1709164800&v=beta&t=Hb5_ZWqzHsevwEYPZE3jtki7uD-TGOasjpoMrnc0VyY",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQEyr6JabhTo-Q/profile-treasury-document-images_1920/1/1706689887273?e=1709164800&v=beta&t=Hb5_ZWqzHsevwEYPZE3jtki7uD-TGOasjpoMrnc0VyY",
+    image: "/webp_certs/DiploPython.webp",
     cl: "no-oculto",
   },
   {
@@ -194,8 +178,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "15 Apr 2022",
     link: "https://media.licdn.com/dms/image/D4D2DAQEK0WzqPdE8ow/profile-treasury-document-images_1920/1/1706689914746?e=1709164800&v=beta&t=b-yt31bN7hEeetEPeNAChjJAvTMIvz8wWvGIJVursZY",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQEK0WzqPdE8ow/profile-treasury-document-images_1920/1/1706689914746?e=1709164800&v=beta&t=b-yt31bN7hEeetEPeNAChjJAvTMIvz8wWvGIJVursZY",
+    image: "/webp_certs/PythonAvanzado.webp",
     cl: "hidden",
   },
   {
@@ -203,8 +186,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "16 Feb 2022",
     link: "https://media.licdn.com/dms/image/D4D2DAQGOigc24OgSng/profile-treasury-document-images_1920/1/1706689941975?e=1709164800&v=beta&t=mCA6b7MFOTK1yW_LQGDcxy1BQ1BDWcYSXMUOpd3zGPk",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQGOigc24OgSng/profile-treasury-document-images_1920/1/1706689941975?e=1709164800&v=beta&t=mCA6b7MFOTK1yW_LQGDcxy1BQ1BDWcYSXMUOpd3zGPk",
+    image: "/webp_certs/PythonIntermedio.webp",
     cl: "hidden",
   },
   {
@@ -212,8 +194,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "15 Dec 2021",
     link: "https://media.licdn.com/dms/image/D4D2DAQEbbF40J6tywg/profile-treasury-document-images_1920/1/1706689963277?e=1709164800&v=beta&t=FzWt4L2m9hRAwnQtcHGb4c7aljoso1ND0bEz338XbQA",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQEbbF40J6tywg/profile-treasury-document-images_1920/1/1706689963277?e=1709164800&v=beta&t=FzWt4L2m9hRAwnQtcHGb4c7aljoso1ND0bEz338XbQA",
+    image: "/webp_certs/PythonInicial.webp",
     cl: "hidden",
   },
   {
@@ -221,8 +202,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "4 Jun 2022",
     link: "https://media.licdn.com/dms/image/D4D2DAQF--NXbRRMVfQ/profile-treasury-document-images_1920/1/1706689772423?e=1709164800&v=beta&t=6dWNZj_mb96nt-TbZWjJZ3JozNZgSpRw3Zy1eEX4Vq0",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQF--NXbRRMVfQ/profile-treasury-document-images_1920/1/1706689772423?e=1709164800&v=beta&t=6dWNZj_mb96nt-TbZWjJZ3JozNZgSpRw3Zy1eEX4Vq0",
+    image: "/webp_certs/RedesAvanzado.webp",
     cl: "no-oculto",
   },
   {
@@ -230,8 +210,7 @@ const PROJECTS = [
     issuer: [TAGS.UTN],
     date: "19 Oct 2021",
     link: "https://media.licdn.com/dms/image/D4D2DAQFGpq3UPsTYUA/profile-treasury-document-images_1920/1/1706689826725?e=1709164800&v=beta&t=AGAz1PVlXp360bWkR4SK9oVysSPXH8lJ0XgVHiGD_iU",
-    image:
-      "https://media.licdn.com/dms/image/D4D2DAQFGpq3UPsTYUA/profile-treasury-document-images_1920/1/1706689826725?e=1709164800&v=beta&t=AGAz1PVlXp360bWkR4SK9oVysSPXH8lJ0XgVHiGD_iU",
+    image: "/webp_certs/RedesInicial.webp",
     cl: "hidden",
   },
   {
@@ -239,8 +218,7 @@ const PROJECTS = [
     issuer: [TAGS.COURSERA, TAGS.GOOGLE],
     date: "29 Jan 2024",
     link: "https://coursera.org/verify/54VYBRBEZNU5",
-    image:
-      "https://s3.amazonaws.com/coursera_assets/meta_images/generated/CERTIFICATE_LANDING_PAGE/CERTIFICATE_LANDING_PAGE~54VYBRBEZNU5/CERTIFICATE_LANDING_PAGE~54VYBRBEZNU5.jpeg",
+    image: "/webp_certs/GoogleCoursera1.webp",
     cl: "no-oculto",
   },
   {
@@ -248,8 +226,7 @@ const PROJECTS = [
     issuer: [TAGS.COURSERA, TAGS.MICHIGAN],
     date: "7 Mar 2021",
     link: "https://coursera.org/verify/JABBD5CQNSGA",
-    image:
-      "https://s3.amazonaws.com/coursera_assets/meta_images/generated/CERTIFICATE_LANDING_PAGE/CERTIFICATE_LANDING_PAGE~JABBD5CQNSGA/CERTIFICATE_LANDING_PAGE~JABBD5CQNSGA.jpeg",
+    image: "/webp_certs/MichiganCoursera.webp",
     cl: "hidden",
   },
   {
@@ -257,8 +234,7 @@ const PROJECTS = [
     issuer: [TAGS.AMAZON],
     date: "16 Sep 2023",
     link: "https://www.credly.com/badges/045e8502-1b39-4ca2-9303-11c74f827053/public_url",
-    image:
-      "https://images.credly.com/size/680x680/images/2784d0d8-327c-406f-971e-9f0e15097003/image.png",
+    image: "/webp_certs/image.webp",
     cl: "no-oculto",
   },
   {
@@ -266,7 +242,7 @@ const PROJECTS = [
     issuer: [TAGS.HACKTHEBOX],
     date: "13 Apr 2023",
     link: "https://academy.hackthebox.com/achievement/badge/6db79208-da0a-11ed-acfc-bea50ffe6cb4",
-    image: "https://academy.hackthebox.com/storage/badges/academician.png",
+    image: "/webp_certs/academician.webp",
     cl: "no-oculto",
   },
   {
@@ -274,8 +250,7 @@ const PROJECTS = [
     issuer: [TAGS.CODERHOUSE],
     date: "17 Nov 2021",
     link: "https://cutt.ly/mY31JRM",
-    image:
-      "https://api.coderhouse.com/ch-www-api/certifications/61bd5ab2bc1e0300526d2060/print?lang=es",
+    image: "/webp_certs/coderhouse.webp",
     cl: "hidden",
   },
 ];
