--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -134,6 +134,22 @@ const PROJECTS = [
     cl: "hidden",
   },
   {
+    title: "Diplomatura Web full stack con React JS",
+    issuer: [TAGS.UTN],
+    date: "16 Feb 2024",
+    link: "https://media.licdn.com/dms/image/D4D2DAQE3kW3uQc80FQ/profile-treasury-document-images_1920/1/1708470629168?e=1709164800&v=beta&t=im60PkqrUM4X9lWG94tmwkCVkOWX01SyGaap02UFACM",
+    image: "/webp_certs/FullStack.webp",
+    cl: "no-oculto",
+  },
+  {
+    title: "Experto Universitario en Ethical Hacking",
+    issuer: [TAGS.UTN],
+    date: "17 Nov 2023",
+    link: "https://media.licdn.com/dms/image/D4D2DAQE366_xIF8Oyg/profile-treasury-document-images_1920/1/1708470882316?e=1709164800&v=beta&t=Ny96O6r3TlAfEoLQkXLmb30V7nA7qeQK4Sn3984LhIk",
+    image: "/webp_certs/EthicalHacking.webp",
+    cl: "no-oculto",
+  },
+  {
     title: "Diplomatura Django Framework",
     issuer: [TAGS.UTN],
     date: "14 Mar 2023",
