agrego transparencia al boton para subir y pongo abajo tags y muestro toda la imagen en las cards de certificaciones

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -75,7 +75,7 @@ const { description, title } = Astro.props;
         position: fixed;
         bottom: 2rem;
         right: 2rem;
-        background-color: #4a5568;
+        background-color: rgba(74, 85, 104, 0.5);
         color: white;
         border: none;
         border-radius: 50%;
