--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -1,6 +1,6 @@
 <article class="grid grid-cols-3 md:grid-cols-4 gap-6 lg:grid-cols-5">
   <div class="flex-item">
-    <h4 class="font-semibold text-xl text-yellow-400">Sistemas Operativos</h4>
+    <h4 class="font-semibold text-xl text-yellow-400">OS</h4>
     <ul>
       <li>Debian</li>
       <li>Ubuntu</li>
@@ -10,15 +10,15 @@
     </ul>
   </div>
   <div class="flex-item">
-    <h4 class="font-semibold text-xl text-yellow-400">Containerization</h4>
+    <h4 class="font-semibold text-xl text-yellow-400">Container</h4>
     <ul>
       <li>Docker</li>
-      <li>Swarm</li>
+      <li>Docker Swarm</li>
       <li>Kubernetes</li>
     </ul>
   </div>
   <div class="flex-item">
-    <h4 class="font-semibold text-xl text-yellow-400">Bases de Datos</h4>
+    <h4 class="font-semibold text-xl text-yellow-400">DB</h4>
     <ul>
       <li>Postgres</li>
       <li>MySQL</li>
@@ -39,18 +39,10 @@
       <li>AWS</li>
       <li>Google Cloud</li>
       <li>Azure</li>
-      <li>Oracle</li>
-      <li>IBM Cloud</li>
-      <li>linode</li>
-      <li>digitalocean</li>
-      <li>Akamai</li>
-      <li>ARSAT</li>
     </ul>
   </div>
   <div class="flex-item">
-    <h4 class="font-semibold text-xl text-yellow-400">
-      Configuration Management
-    </h4>
+    <h4 class="font-semibold text-xl text-yellow-400">IAT</h4>
     <ul>
       <li>SaltStack</li>
       <li>Ansible</li>
@@ -67,7 +59,6 @@
       <li>InfluxDB</li>
       <li>Telegraf</li>
       <li>cAdvisor</li>
-      <li>Zabbix</li>
     </ul>
   </div>
   <div class="flex-item">
@@ -83,7 +74,6 @@
     <ul>
       <li>Opennebula</li>
       <li>Proxmox</li>
-      <li>VirtualBox</li>
     </ul>
   </div>
 </article>
