--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,6 +5,7 @@ import LinkedInIcon from "@/components/icons/LinkedIn.astro";
 import MailIcon from "@/components/icons/Mail.astro";
 import SocialPill from "@/components/SocialPill.astro";
 import LinkedinPill from "@/components/LinkedinPill.astro";
+import DownloadPill from "@/components/DownloadPill.astro";
 ---
 
 <div class="flex flex-col gap-4 items-center md:flex-row">
@@ -39,6 +40,9 @@ import LinkedinPill from "@/components/LinkedinPill.astro";
         <MailIcon class="size-4" />
         Contáctame
       </SocialPill>
+
+      <DownloadPill>CV</DownloadPill>
+
       <LinkedinPill href="https://linkedin.com/in/agustinezequielacevedo">
         <LinkedInIcon class="size-4" />
         LinkedIn
