Arreglo barra al costado en telefono, muevo opennebula a clouds

--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -39,6 +39,7 @@
       <li>AWS</li>
       <li>Google Cloud</li>
       <li>Azure</li>
+      <li>Open Nebula</li>
     </ul>
   </div>
   <div class="flex-item">
@@ -67,13 +68,6 @@
       <li>Jenkins</li>
       <li>GitLab-CI</li>
       <li>GitHub Actions</li>
-    </ul>
-  </div>
-  <div class="flex-item">
-    <h4 class="font-semibold text-xl text-yellow-400">Virtualization</h4>
-    <ul>
-      <li>Opennebula</li>
-      <li>Proxmox</li>
     </ul>
   </div>
 </article>
