Cambio seccion sobre mi

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -5,27 +5,46 @@
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      ¡Hola, soy Agus! Profesional de TI apasionado por la tecnología.
-      Actualmente me desenvuelvo como <strong
-        >Sysadmin en la Universidad Tecnológica Nacional (UTN)</strong
-      > en donde también estudio la carrera de <strong
+      ¡Hola, soy Agus! Soy un Profesional de IT apasionado por la tecnología.
+      Actualmente me desempeño como <strong
+        >administrador de sistemas en la Universidad Tecnológica Nacional (UTN)</strong
+      >, donde también estoy actualmente cursando la carrera de <strong
         >Ingeniería en Sistemas de la Información</strong
       >.
     </p>
-
     <p>
-      Paralelamente complemento mis estudios con cursos y certificaciones en <strong
-        >Lenguajes de Programación, DevOps, SRE, Cloud Computing, Networking y
-        Seguridad Informática</strong
-      >.
+      Mi interés por la tecnología comenzó desde una edad temprana, donde pasaba
+      innumerables horas frente a una computadora, fascinado por el mundo
+      digital que se desarrollaba ante mis ojos. Esta pasión me llevó a estudiar
+      para ser <strong>técnico electrónico en la secundaria</strong>, y
+      finalmente, me guió hacia la ingeniería en sistemas.
     </p>
 
     <p>
-      Como analogía al horóscopo, uso <strong>Debian</strong> con <strong
-        >Gnome</strong
-      > y <strong>Tilix</strong> en mi estación de trabajo. Mi objetivo profesional
-      es mantenerme a la vanguardia de las tecnologías implementadas en el area de
-      IT.
+      Empecé mi carrera profesional trabajando en el área de soporte IT, donde
+      pude reafirmar mi interés en el hardware informático, las redes y el vasto
+      mundo del funcionamiento interno de las aplicaciones e Internet.
+    </p>
+    <p>
+      Creo firmemente en la mejora continua y la formación constante, por eso
+      siempre estoy buscando ampliar mis conocimientos a través de cursos y
+      certificaciones. Mis áreas de interés principal son <strong
+        >DevOps, SRE y la Seguridad Informática</strong
+      > asi como también los <strong>microservicios y el Cloud Computing</strong
+      >, campos que presentan desafíos constantes y oportunidades para aprender
+      y crecer.
+    </p>
+
+    <p>
+      En mi tiempo libre, me podrás encontrar jugando en mi computadora,
+      disfrutando de buena música, jugando al fútbol, intentando automatizar
+      algún proceso, creando alguna aplicación como esta página o muy
+      posiblemente disfrutando un buen cafe.
+    </p>
+    <p>
+      Pero hay más sobre mí que estoy ansioso por compartir. Pronto estaré
+      actualizando esta sección con más detalles sobre mis proyectos, mis metas
+      y cómo espero hacer un impacto positivo en el mundo de la tecnología.
     </p>
   </div>
 </article>
