Cambio experienvia utn admin

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,7 @@ const EXPERIENCE = [
     title: "Administrador de Sistemas",
     company: "Universidad Tecnológica Nacional",
     description:
-      "Como parte del equipo de Administración de Sistemas, Redes e Infraestructura, me especializo en la gestión de servidores, redes y entornos en la nube. Colaboro estrechamente para garantizar la continuidad operativa, el rendimiento y, especialmente, la seguridad de los sistemas. Contribuyo a implementar prácticas DevOps, automatizando procesos para una eficiencia operativa óptima. Mi enfoque se centra en resolver proactivamente problemas, implementar medidas de seguridad sólidas y explorar nuevas tecnologías para optimizar la infraestructura tecnológica.",
+      "Como parte del equipo de Administración de Sistemas, Redes e Infraestructura, me especializo en la gestión de servidores, redes y entornos en la nube. Colaboro especialmente para garantizar la seguridad, alta disponibilidad y eficiencia de los sistemas. Contribuyo a implementar prácticas DevOps, automatizando procesos para una eficiencia operativa óptima. Mi enfoque se centra en resolver proactivamente problemas, implementar medidas de seguridad sólidas y explorar nuevas tecnologías para optimizar la infraestructura tecnológica.",
   },
   {
     date: "Apr 2021 - Mar 2023",
