Cambio nombre Sobre mi en nav y titulo pagina

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ const navItems = [
     url: "/#certificados",
   },
   {
-    title: "Sobre mí",
+    title: "Perfil",
     label: "sobre-mi",
     url: "/#sobre-mi",
   },
