--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Stack from "@/components/Stack.astro";
 ---
 
 <Layout
-  title="Porfolio de Agustin Acevedo - Administrador de Sistemas, Redes e Infraestructura"
+  title=" Agustin Acevedo - Sysadmin"
   description="Contrata a Agustin para crear y/o administrar tu infraestructura tecnológica o crear soluciones informáticas que se ajusten a sus necesidades."
 >
   <main class="px-4">
