Saco disponible para trabajar

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -35,7 +35,7 @@ import DownloadPill from "@/components/DownloadPill.astro";
       Aires, Argentina 🇦🇷. Especializado en el gestión de infraestructuras On-Premise,
       Cloud y Híbridas.
     </p>
-    <nav class="flex flex-wrap justify-center gap-4 mt-8">
+    <nav class="flex flex-wrap justify-center md:justify-normal gap-4 mt-8">
       <SocialPill href="mailto:agus.acevedo2000@gmail.com">
         <MailIcon class="size-4" />
         Contáctame
@@ -53,7 +53,7 @@ import DownloadPill from "@/components/DownloadPill.astro";
         rel="noopener"
         class="flex items-center transition md:justify-center md:hover:scale-105"
       >
-        <Badge>Disponible para trabajar</Badge>
+        <!--  <Badge>Disponible para trabajar</Badge> -->
       </a>
     </nav>
   </div>
