Cambio descripcion preview

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Stack from "@/components/Stack.astro";
 
 <Layout
   title=" Agustin Acevedo - Sysadmin"
-  description="Contrata a Agustin para crear y/o administrar tu infraestructura tecnológica o crear soluciones informáticas que se ajusten a sus necesidades."
+  description="Explora mi perfil y mi trayectoria en el mundo de IT a traves de mi portfolio en linea. Desde mis certificaciones hasta mis habilidades tecnológicas, este espacio refleja mi pasión y dedicación por la tecnología."
 >
   <main class="px-4">
     <SectionContainer id="top" class="py-16 md:py-36">
