Cambio urls de certificaciones de linkedin a la imagen

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -137,7 +137,7 @@ const PROJECTS = [
     title: "Diplomatura Web full stack con React JS",
     issuer: [TAGS.UTN],
     date: "16 Feb 2024",
-    link: "https://media.licdn.com/dms/image/D4D2DAQE3kW3uQc80FQ/profile-treasury-document-images_1920/1/1708470629168?e=1709164800&v=beta&t=im60PkqrUM4X9lWG94tmwkCVkOWX01SyGaap02UFACM",
+    link: "/webp_certs/FullStack.webp",
     image: "/webp_certs/FullStack.webp",
     cl: "no-oculto",
   },
@@ -145,7 +145,7 @@ const PROJECTS = [
     title: "Experto Universitario en Ethical Hacking",
     issuer: [TAGS.UTN],
     date: "17 Nov 2023",
-    link: "https://media.licdn.com/dms/image/D4D2DAQE366_xIF8Oyg/profile-treasury-document-images_1920/1/1708470882316?e=1709164800&v=beta&t=Ny96O6r3TlAfEoLQkXLmb30V7nA7qeQK4Sn3984LhIk",
+    link: "/webp_certs/EthicalHacking.webp",
     image: "/webp_certs/EthicalHacking.webp",
     cl: "no-oculto",
   },
@@ -153,7 +153,7 @@ const PROJECTS = [
     title: "Diplomatura Django Framework",
     issuer: [TAGS.UTN],
     date: "14 Mar 2023",
-    link: "https://media.licdn.com/dms/image/D4D2DAQF3CcWNIEk0Ig/profile-treasury-document-images_1920/1/1706689163030?e=1709164800&v=beta&t=cYJjS-kUOFw6Pl34gfQy1BR90TqAC926CAu0yi0VVMw",
+    link: "/webp_certs/DiplomaturaDjango.webp",
     image: "/webp_certs/DiplomaturaDjango.webp",
     cl: "no-oculto",
   },
@@ -161,7 +161,7 @@ const PROJECTS = [
     title: "Django Avanzado - En Producción",
     issuer: [TAGS.UTN],
     date: "14 Mar 2023",
-    link: "https://media.licdn.com/dms/image/D4D2DAQGc9RgTlb12FA/profile-treasury-document-images_1920/1/1706689026768?e=1709164800&v=beta&t=xDnkU2QKp_HMwwvFSCfo5y0FJOxgh5ZCOe91R06WB5s",
+    link: "/webp_certs/DjangoAvanzado.webp",
     image: "/webp_certs/DjangoAvanzado.webp",
     cl: "hidden",
   },
@@ -169,7 +169,7 @@ const PROJECTS = [
     title: "Django Intermedio - Diseño de Plataformas",
     issuer: [TAGS.UTN],
     date: "28 Dec 2022",
-    link: "https://media.licdn.com/dms/image/D4D2DAQHD37bBHkBMpQ/profile-treasury-document-images_1920/1/1706689384487?e=1709164800&v=beta&t=sET0V4xyseEjCHW-WMpeuekyJfo0DQOGT-gcvOkTEdo",
+    link: "/webp_certs/DjangoIntermedio.webp",
     image: "/webp_certs/DjangoIntermedio.webp",
     cl: "hidden",
   },
@@ -177,7 +177,7 @@ const PROJECTS = [
     title: "Django Inicial - Arquitectura",
     issuer: [TAGS.UTN],
     date: "11 Oct 2022",
-    link: "https://media.licdn.com/dms/image/D4D2DAQFBK51Nf97XYQ/profile-treasury-document-images_1920/1/1706689740894?e=1709164800&v=beta&t=jmhYqs0nQ5PNlKBgYBPZ-c3iL3SluhGtlhBn_hPbbbk",
+    link: "/webp_certs/DjangoInicial.webp",
     image: "/webp_certs/DjangoInicial.webp",
     cl: "hidden",
   },
@@ -185,7 +185,7 @@ const PROJECTS = [
     title: "Diplomatura Python",
     issuer: [TAGS.UTN],
     date: "15 Apr 2022",
-    link: "https://media.licdn.com/dms/image/D4D2DAQEyr6JabhTo-Q/profile-treasury-document-images_1920/1/1706689887273?e=1709164800&v=beta&t=Hb5_ZWqzHsevwEYPZE3jtki7uD-TGOasjpoMrnc0VyY",
+    link: "/webp_certs/DiploPython.webp",
     image: "/webp_certs/DiploPython.webp",
     cl: "no-oculto",
   },
@@ -193,7 +193,7 @@ const PROJECTS = [
     title: "Python 3 - Avanzado",
     issuer: [TAGS.UTN],
     date: "15 Apr 2022",
-    link: "https://media.licdn.com/dms/image/D4D2DAQEK0WzqPdE8ow/profile-treasury-document-images_1920/1/1706689914746?e=1709164800&v=beta&t=b-yt31bN7hEeetEPeNAChjJAvTMIvz8wWvGIJVursZY",
+    link: "/webp_certs/PythonAvanzado.webp",
     image: "/webp_certs/PythonAvanzado.webp",
     cl: "hidden",
   },
@@ -201,7 +201,7 @@ const PROJECTS = [
     title: "Python 3 - Intermedio",
     issuer: [TAGS.UTN],
     date: "16 Feb 2022",
-    link: "https://media.licdn.com/dms/image/D4D2DAQGOigc24OgSng/profile-treasury-document-images_1920/1/1706689941975?e=1709164800&v=beta&t=mCA6b7MFOTK1yW_LQGDcxy1BQ1BDWcYSXMUOpd3zGPk",
+    link: "/webp_certs/PythonIntermedio.webp",
     image: "/webp_certs/PythonIntermedio.webp",
     cl: "hidden",
   },
@@ -209,7 +209,7 @@ const PROJECTS = [
     title: "Python 3 - Inicial",
     issuer: [TAGS.UTN],
     date: "15 Dec 2021",
-    link: "https://media.licdn.com/dms/image/D4D2DAQEbbF40J6tywg/profile-treasury-document-images_1920/1/1706689963277?e=1709164800&v=beta&t=FzWt4L2m9hRAwnQtcHGb4c7aljoso1ND0bEz338XbQA",
+    link: "/webp_certs/PythonInicial.webp",
     image: "/webp_certs/PythonInicial.webp",
     cl: "hidden",
   },
@@ -217,7 +217,7 @@ const PROJECTS = [
     title: "Redes de Datos - Avanzado",
     issuer: [TAGS.UTN],
     date: "4 Jun 2022",
-    link: "https://media.licdn.com/dms/image/D4D2DAQF--NXbRRMVfQ/profile-treasury-document-images_1920/1/1706689772423?e=1709164800&v=beta&t=6dWNZj_mb96nt-TbZWjJZ3JozNZgSpRw3Zy1eEX4Vq0",
+    link: "/webp_certs/RedesAvanzado.webp",
     image: "/webp_certs/RedesAvanzado.webp",
     cl: "no-oculto",
   },
@@ -225,7 +225,7 @@ const PROJECTS = [
     title: "Redes de Datos - Inicial",
     issuer: [TAGS.UTN],
     date: "19 Oct 2021",
-    link: "https://media.licdn.com/dms/image/D4D2DAQFGpq3UPsTYUA/profile-treasury-document-images_1920/1/1706689826725?e=1709164800&v=beta&t=AGAz1PVlXp360bWkR4SK9oVysSPXH8lJ0XgVHiGD_iU",
+    link: "/webp_certs/RedesInicial.webp",
     image: "/webp_certs/RedesInicial.webp",
     cl: "hidden",
   },
