--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -13,7 +13,7 @@
     <h4 class="font-semibold text-xl text-yellow-400">Container</h4>
     <ul>
       <li>Docker</li>
-      <li>Docker Swarm</li>
+      <li>Swarm</li>
       <li>Kubernetes</li>
     </ul>
   </div>
