--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -47,7 +47,7 @@ const currentYear = new Date().getFullYear();
         <a href="/#top" class="hover:underline me-4 md:me-6">Home</a>
       </li>
       <li>
-        <a id="contacto" href="mailto:miduga@gmail.com" class="hover:underline"
+        <a id="contacto" href="mailto:agus.acevedo2000@gmail.com" class="hover:underline"
           >Contacto</a
         >
       </li>
